# dhallidity

./: A.dhall  B.dhall  C.dhall  MkContract.dhall  README.md  cabal.project  dhallidity.cabal  flake.nix
app/: Main.hs
src/: Lib.hs
