cabal-version: 1.12

name:           dhallidity
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/hussein-aitlahcen/dhallidity#readme>
homepage:       https://github.com/hussein-aitlahcen/dhallidity#readme
bug-reports:    https://github.com/hussein-aitlahcen/dhallidity/issues
author:         Hussein Ait Lahcen
maintainer:     hussein.aitlahcen@gmail.com
copyright:      2022 Hussein Ait Lahcen
license:        GPL3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/hussein-aitlahcen/dhallidity

library
  exposed-modules:
      Lib
  other-modules:
      Paths_dhallidity
  hs-source-dirs:
      src
  build-depends:
      base
    , text
    , bytestring
    , base16-bytestring
    , dhall
    , evm-opcodes
    , containers
  default-language: Haskell2010

executable dhallidity-exe
  main-is: Main.hs
  other-modules:
      Paths_dhallidity
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base
    , dhallidity
  default-language: Haskell2010
